--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".RegisterActivity"
+            android:theme="@style/NoActionBarTheme"/>
+        <activity
+            android:name=".LoginActivity"
+            android:noHistory="true"
+            android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".SplashActivity"
             android:noHistory="true"
@@ -21,13 +27,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".RegisterActivity"
-            android:theme="@style/NoActionBarTheme" />
-        <activity
-            android:name=".LoginActivity"
-            android:noHistory="true"
-            android:theme="@style/NoActionBarTheme" />
         <activity android:name=".MainActivity" />
     </application>
 
