--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
+    dataBinding.enabled true
 
     compileOptions {
         sourceCompatibility 1.8
@@ -47,5 +49,7 @@ dependencies {
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.14.0'
     implementation 'com.google.ar.sceneform:core:1.14.0'
     implementation 'com.google.ar:core:1.14.0'
+
+    implementation 'com.github.nitrico.lastadapter:lastadapter:2.3.0'
 }
 apply plugin: 'com.google.gms.google-services'
